fix the banner overlapping with report icon

--- a/src/routes/landing/landing.less
+++ b/src/routes/landing/landing.less
@@ -22,7 +22,6 @@
   color: #fff;
   position: fixed;
   top: 70px;
-  width: 60%;
   text-align: center;
   z-index: 2;
   p{
@@ -700,6 +699,8 @@ tr.row.report {
   height: 85px;
   width: 100px;
   overflow: hidden;
+  position: absolute;
+  top: 50%;
 
   @media screen and (max-height: 470px){
     width: 155px;
